--- a/views/details.erb
+++ b/views/details.erb
@@ -1,2 +1,6 @@
 <h1>  <%= @all_films[@index].title %> </h1>
-<h1> £<%= @all_films[@index].price %> </h1>
+<h2> £<%= @all_films[@index].price %> </h2>
+
+<hr>
+
+<h1><a href="/films"><< Back to list</h1>
