--- a/views/index.erb
+++ b/views/index.erb
@@ -3,7 +3,7 @@
   <% for film in @all_films %>
    <% count += 1 %>
    <li><a href="films/<%=count%>"> <%= film.title %> </li>
-   <hr>
+   <hr class="index-hr">
   <% end %>
   </ul>  
 
