--- a/public/style.css
+++ b/public/style.css
@@ -1,19 +1,24 @@
 :root { 
     background-color: #add8e6;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
-    font-size: xx-large;
+    font-size: 100px;
+    text-align: left;
+    color: #ffff;
+}
+
+h2 {
+    font-size: 80px;
+    color: #ffff;
+    font-weight: 400;
 }
 
 ul {
     margin-top: 10%;
     text-align: left;
     list-style: none;
-}
-
-hr {
-    width: 100px;
 }
 
 li {
@@ -24,4 +29,19 @@ a {
     font-size: 50px;
     text-decoration: none;
     color: #ffff;
+}
+
+/* CLASSES */
+.details-hr {
+    background-color: #ffff; 
+    height: 2px;
+    border: 0px;
+}
+
+.index-hr {
+    background-color: #e7dfd5;
+    color: #e7dfd5;
+    height: 2px;
+    width: 300px;
+    border: 0px;
 }
